# ai-scraper

./: .gitignore  LICENSE  README.md  install.ps1  install.sh  open_webui_tool.py  pyproject.toml
ai_scraper/: __init__.py  browser.py  cli.py  command_safety.py  core.py  learner.py  llm.py  memory.py  recovery.py  schemas.py
examples/: custom_schema.py  scrape_apartments.py  scrape_jobs.py
