[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scraper"
version = "1.2.0"
description = "AI-powered universal web scraper — point at any website, extract structured data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "masood1996-geo"}
]
keywords = ["scraper", "ai", "llm", "web-scraping", "headless-browser", "data-extraction"]

dependencies = [
    "openai>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "requests>=2.31",
    "undetected-chromedriver>=3.5",
    "rich>=13.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
ai-scraper = "ai_scraper.cli:main"

[tool.setuptools.packages.find]
include = ["ai_scraper*"]
